fixed text alignment in card

--- a/frontend/match-to-escapr.css
+++ b/frontend/match-to-escapr.css
@@ -4,6 +4,7 @@ body {
     display: flex;
     flex-direction: column;
     align-items: center;
+    scale: 0.8;
 }
 
 h1 {
@@ -12,14 +13,14 @@ h1 {
 
 .game-container {
     display: grid;
-    grid-template-columns: repeat(4, 100px);
-    grid-template-rows: repeat(4, 100px);
+    grid-template-columns: repeat(4, 130px);
+    grid-template-rows: repeat(4, 130px);
     gap: 10px;
 }
 
 .card {
-    width: 100px;
-    height: 100px;
+    width: 110px;
+    height: 110px;
     background-color: #3498db;
     display: flex;
     justify-content: center;
@@ -29,6 +30,7 @@ h1 {
     cursor: pointer;
     border-radius: 8px;
     transition: transform 0.2s;
+    padding: 10px;
 }
 
 .card.flipped {
